--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/lc"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
@@ -44,6 +44,9 @@
         <activity android:name=".LoginActivity" />
         <activity android:name=".ThemeActivity"/>
         <activity android:name=".RegActivity"/>
+        <activity android:name=".BingliActivity"></activity>
+        <activity android:name=".InfoActivity"></activity>
+
 
         <!-- 友盟AppKey， 需要替换成你自己的 -->
         <meta-data
