--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,8 @@ dependencies {
     compile files('libs/SocialSDK_yixin_2.jar')
     compile files('libs/SocialSDK_ynote.jar')
     compile files('libs/umeng_social_sdk.jar')
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'org.xutils:xutils:3.3.38'
+    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:v1.9.7'
+    compile 'com.android.support:cardview-v7:25.0.0'
 }
